Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintPart__c/SMAX_PS_ComplaintPart__c.object-meta.xml
<CustomObject>
    <description>Part of ServiceMax</description>
    <label>Complaint Part</label>
    <nameField>
        <displayFormat>CPN-{0000000000}</displayFormat>
        <label>Complaint Part Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>