Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintPart__c/fields/SMAX_PS_Complaint__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Complaint__c</fullName>
    <label>Complaint</label>
    <referenceTo>SMAX_PS_Complaint__c</referenceTo>
    <relationshipLabel>Complaint Parts</relationshipLabel>
    <relationshipName>Complaint_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>