Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintPart__c/fields/SMAX_PS_Part__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Part</description>
    <inlineHelpText>Part</inlineHelpText>
    <label>Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Complaint Parts</relationshipLabel>
    <relationshipName>Complaint_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>