Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintPart__c/fields/SMAX_PS_PartDescription__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_PartDescription__c</fullName>
    <description>Part Description</description>
    <inlineHelpText>Part Description</inlineHelpText>
    <label>Part Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>