Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintPart__c/fields/SMAX_PS_PartNumber__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_PartNumber__c</fullName>
    <description>Part Number</description>
    <inlineHelpText>Part Number</inlineHelpText>
    <label>Part Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>