Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintPart__c/fields/SMAX_PS_PartQty__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_PartQty__c</fullName>
    <description>Part Qty</description>
    <inlineHelpText>Part Qty</inlineHelpText>
    <label>Part Qty</label>
    <length>13</length>
    <type>Text</type>
</CustomField>